_sass/navigation.scss
.nav-open {
	header {
		height: 100vw;
		padding-bottom: 100px;
		overflow-y: auto;
		-webkit-overflow-scrolling: touch;
		border-bottom: 1px solid #ecedf2;
		background: #444;

		@media #{$mid-point} {
			background: #444;
		}
	}

	nav {
		width: 100%;
		margin: 20px 0 0 0;
		border: 0;
		text-align: center;
		display: block;

		a {
			display: block;
		}

		@media #{$mid-point} {
			border: 0;
			padding: 0px 20px;

			a {
				display: inline;
			}
		}
		.menu__drop {
			position: relative;
			width: 100vw;
		}
		
		.menu {
			display: block;
		}
	}
}

.nav-toggle {
	font-size: 1.9em;
	text-align: right;
	padding: 0.5em;
	border: 0;

	@media #{$mid-point} {
		display: none;
	}

	&:hover {
		border: 0;
	}
}

nav {
	text-transform: uppercase;
	font-size: 0.8em;
	width: 100%;
	display: none;
	height: 0px;

	ul {
		margin: 0;
		padding: 0;

		.menu__drop {
			position: absolute;
			width: 100%;
			top: -9999em;
			opacity: 0;
			border-left: 10px solid transparent;
			-webkit-transition: 0.5s opacity;
			transition: 0.5s opacity;
			z-index: 1;
		}
	}

	li {
		display: block;
	}

	.menu__list {
		position: relative;
		height: 2.5em;
	}

	.menu__list:hover .menu__drop {
		border-left: 0px solid black;
		position: absolute;
		left: -50%;
		top: 50px;
		width: 190%;
		padding: 5px;
		opacity: 1;
		background-color: #383838;
		box-shadow: 0 0.4rem 2.8rem rgba(24,23,22,.3);
		text-align: center;
		margin: 0;

		@media #{$mid-point} {
			display: block;
		}
	}

	.menu__list::after {
		position: absolute;
		border: 5px solid;
		border-color: transparent transparent transparent #eee;
		top: 1em;
		right: 0.7em;
		-webkit-transition: 0.5s;
		transition: 0.5s;
	}

	.menu__list:hover::after {
		-webkit-transform: scaleX(-1);
		-ms-transform: scaleX(-1);
		transform: scaleX(-1);
	}

	@media #{$mid-point} {
		text-align: right;
		position: absolute;
		top: 0;
		right: -9999px;
		padding: 4px 20px;

		li {
			display: inline-block;
		}
	}

	a {
		margin: 0 3px;
		padding: 20px 10px;
		color: rgba(255, 255, 255, 0.8);
		transition: 0.2s ease-in-out;
		display: none;
		font-size: 16px;
		letter-spacing: 1px;

		@media #{$mid-point} {
			//border-bottom: 2px solid rgba(255, 255, 255, 0);
			display: block;
			padding: 13px;
		}

	}

	a:hover {
		color: #fff;

		@media #{$mid-point} {
			display: block;
		}
	}

	@media #{$mid-point} {
		a.highlight {
			border: 1px #ccc solid;
			border-radius: 5px;

			&:hover {
				background: #fff;
				color: $brand-color;
			}
		}
	}

	a.active {
		color: #fff;
	}
}

